# cliare

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  action.yml  devbox.json  flake.nix  install.sh  justfile
benchmarks/: agent-harness-corpus.json  launch-low-pretraining-corpus.json  local-corpus.json  vendor-calibration-corpus.json
crates/cliare-app/: Cargo.toml
crates/cliare-app/src/: lib.rs
crates/cliare-cli/: Cargo.toml
crates/cliare-cli/src/: cli.rs  command_spec.rs  lib.rs
crates/cliare-cli/src/cli/: benchmark.rs  describe.rs  eval.rs  guard.rs  issues.rs  jobs.rs  measure.rs  metadata.rs  playbook.rs  report.rs  root.rs  skills.rs  summary.rs  surface.rs  tests.rs  traversal.rs
crates/cliare-cli/src/cli/tests/: benchmark.rs  core.rs  describe.rs  eval.rs  issues.rs  jobs.rs  measure.rs  metadata.rs  playbook.rs  report.rs  skills.rs  summary.rs  support.rs  surface.rs  traversal.rs
crates/cliare-cli/src/command_spec/: build.rs  model.rs  render.rs  tests.rs
crates/cliare-context/: Cargo.toml
crates/cliare-context/src/: artifact.rs  cli.rs  lib.rs  render.rs  runtime.rs  suite.rs  tests.rs
crates/cliare-core/: Cargo.toml
crates/cliare-core/src/: artifacts.rs  error.rs  lib.rs  probe_intent.rs  process_status.rs
crates/cliare-eval/: Cargo.toml
crates/cliare-eval/src/: lib.rs  shape_quality.rs
crates/cliare-eval/src/shape_quality/: io.rs  metrics.rs  model.rs  render.rs  tests.rs
crates/cliare-evidence/: Cargo.toml
crates/cliare-evidence/src/: lib.rs
crates/cliare-guidance/: Cargo.toml
crates/cliare-guidance/src/: lib.rs  playbook.rs  skills.rs
crates/cliare-guidance/src/playbook/: commands.rs  data.rs  lifecycles.rs  render.rs  tests.rs
crates/cliare-inference/: Cargo.toml
crates/cliare-inference/src/: belief.rs  diagnostic.rs  layout.rs  layout_tokens.rs  lib.rs  output.rs  precondition.rs  score_model.rs
crates/cliare-inference/src/diagnostic/: analysis.rs  model.rs  recovery.rs  tests.rs  tokens.rs
crates/cliare-inference/src/layout/: commands.rs  document.rs  extract.rs  flags.rs  output_modes.rs  sections.rs  tests.rs  types.rs
crates/cliare-inspect/: Cargo.toml
crates/cliare-inspect/src/: describe.rs
crates/cliare-inspect/src/describe/: inspect.rs  map.rs  model.rs  navigation.rs  render.rs  specs.rs  summaries.rs  tests.rs  util.rs
crates/cliare-issues/: Cargo.toml
crates/cliare-issues/src/: issue_disposition.rs  lib.rs
crates/cliare-measure/: Cargo.toml
crates/cliare-measure/src/: benchmark.rs  ci.rs  evidence.rs  guard.rs  jobs.rs  lib.rs  measure.rs  planner.rs
crates/cliare-measure/src/benchmark/: corpus.rs  format.rs  io.rs  paths.rs  report_model.rs  runner.rs  tests.rs  writer.rs
crates/cliare-measure/src/jobs/: model.rs  spawn.rs  status.rs  tests.rs  util.rs
crates/cliare-measure/src/measure/: bootstrap.rs  cache.rs  checkpoint.rs  profile.rs  progress.rs  run.rs  summary.rs  tests.rs  traversal.rs
crates/cliare-measure/src/planner/: deterministic.rs  model.rs  rank.rs  tests.rs
crates/cliare-policy/: Cargo.toml
crates/cliare-policy/src/: lib.rs  path_classification.rs  policy.rs
crates/cliare-report/: Cargo.toml
crates/cliare-report/src/: artifact_guide.rs  condition_dictionary.rs  issue_disposition.rs  issues.rs  lib.rs  markdown.rs  report.rs  report_evidence.rs  report_format.rs  report_markdown.rs  report_model.rs  surface.rs
crates/cliare-report/src/issues/: model.rs  packet.rs  render.rs  tests.rs
crates/cliare-report/src/report/: actions.rs  health.rs  issue_builder.rs  issue_evidence.rs  ledger.rs  packets.rs  recommendations.rs  tests.rs  util.rs
crates/cliare-report/src/report_markdown/: actions.rs  findings.rs  guidance.rs  ledger.rs  navigation.rs  samples.rs  summary.rs  tests.rs  written.rs
crates/cliare-report/src/summary/: artifacts.rs  mod.rs  model.rs  render.rs
crates/cliare-report/src/surface/: index.rs  matching.rs  model.rs  packets.rs  render.rs  tests.rs  tokens.rs
crates/cliare-runtime/: Cargo.toml
crates/cliare-runtime/src/: fingerprint.rs  lib.rs  process.rs  sandbox.rs
crates/cliare-runtime/src/sandbox/: snapshot.rs  tests.rs
crates/cliare-score/: Cargo.toml
crates/cliare-score/src/: score.rs
crates/cliare-score/src/score/: artifacts.rs  calculator.rs  findings.rs  formulas.rs  labels.rs  metrics.rs  model.rs  navigation.rs  report.rs  tests.rs  util.rs
crates/cliare-shape/: Cargo.toml
crates/cliare-shape/src/: claims.rs  lib.rs  observation.rs  shape.rs
crates/cliare-shape/src/claims/: command.rs  flag.rs  helpers.rs  output_contract.rs  path.rs  set.rs  tests.rs
crates/cliare-shape/src/shape/: build.rs  gaps.rs  index.rs  labels.rs  markdown.rs  model.rs  tests.rs  writer.rs
docs/: 00-index.md  01-vision-and-positioning.md  02-use-cases-and-personas.md  03-system-architecture.md  04-probe-sandbox-runtime.md  05-evidence-and-command-shape-spec.md  06-computational-scoring-model.md  06-mathematical-model.md  07-scoring-and-improvement-tracking.md  08-ci-leaderboard-and-gtm.md  08-ci-leaderboard-and-publishing.md  09-qa-benchmarking-and-calibration.md  10-checkpointing-and-resume.md  11-implementation-plan.md  12-reference-cli-behavior-guide.md  13-rust-runtime-engineering.md  14-operational-contracts.md  15-generic-inference-processor.md  16-progress-scorecard.md  17-scoring-model-and-bayesian-confidence.md  18-calibration-and-leaderboard-authority.md  19-runtime-evidence-for-agent-ready-clis.md  19-runtime-evidence-for-agent-ready-clis.tex  20-persona-outcome-packets.md  21-reviewable-issue-ledger.md  22-agent-ready-cli-standard-template.md  23-agent-skills-installation.md  24-cli-benchmark-corpus-tracker.md  25-calibration-workflow-todo.md  26-maintainer-dispositions.md  27-maintainer-playbook.md  README.md  index.md  storybook-readme-section.md
score-models/: cliare-score-v0.json
scripts/: bump-version.sh
src/: artifact_guide.rs  artifacts.rs  benchmark.rs  ci.rs  claims.rs  cli.rs  command_spec.rs  context.rs  describe.rs  diagnostic.rs  error.rs  evidence.rs  fingerprint.rs  guard.rs  (+27 more)
(+67 files in other folders)
