[package]
name = "cliare"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/modiqo/cliare"
description = "CLI agent-readiness measurement, command-shape inference, and CI scorecards"
readme = "README.md"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.45.1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
