[package]
name = "cliare-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime context artifacts and comparison for CLIARE"

[dependencies]
clap.workspace = true
cliare-core = { version = "0.1.8", path = "../cliare-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
