[package]
name = "cliare-guidance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operational playbooks and agent skill installation for CLIARE"

[dependencies]
cliare-cli = { version = "0.1.9", path = "../cliare-cli" }
cliare-core = { version = "0.1.9", path = "../cliare-core" }
cliare-report = { version = "0.1.9", path = "../cliare-report" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
