[package]
name = "cliare-issues"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Issue review and disposition models for CLIARE"

[dependencies]
clap.workspace = true
cliare-core = { version = "0.1.7", path = "../cliare-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
