[package]
name = "cliare-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Policy evaluation for CLIARE measurements"

[dependencies]
cliare-core = { version = "0.1.8", path = "../cliare-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
