[package]
name = "cliare-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Report support utilities for CLIARE"

[dependencies]
clap.workspace = true
cliare-cli = { version = "0.1.7", path = "../cliare-cli" }
cliare-context = { version = "0.1.7", path = "../cliare-context" }
cliare-core = { version = "0.1.7", path = "../cliare-core" }
cliare-issues = { version = "0.1.7", path = "../cliare-issues" }
cliare-policy = { version = "0.1.7", path = "../cliare-policy" }
cliare-runtime = { version = "0.1.7", path = "../cliare-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
